--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class="container">
+        <!--#### header ####-->
         <header>
             <div>
                 <h1>Pillow Talk</h1>
@@ -23,6 +24,7 @@
             </div>
         </header>
 
+        <!--#### aside/nav ####-->
         <aside>
             <nav>
                 <ul>
@@ -33,6 +35,7 @@
             </nav>
         </aside>
 
+        <!--#### main ####-->
         <main>
             <div class="top-row">
                 <img src="./assets/imgs/all.png" alt="shop all">
@@ -48,6 +51,7 @@
             </div>
         </main>
 
+        <!--#### footer ####-->
         <footer>
             <h3>Sleep on it!</h3>
         </footer>
